--- a/getting-started/prerequisites-installation/installation-methods.mdx
+++ b/getting-started/prerequisites-installation/installation-methods.mdx
@@ -1,198 +1,324 @@
 ---
-title: "Installation Methods"
-description: "Step-by-step instructions for installing GoogleTest and GoogleMock using CMake, Bazel, or manual integration. Includes guidance for Linux, macOS, and Windows users with links to relevant build scripts and quickstart guides."
+title: "Installation on Different Platforms"
+description: "Step-by-step instructions to install GoogleTest and GoogleMock using popular approaches such as CMake, Bazel, and manual build. Covers Windows, macOS, and Linux with commands and troubleshooting tips for each method."
 ---
 
-# Installation Methods
+# Installation on Different Platforms
 
-This guide provides step-by-step instructions to install GoogleTest and GoogleMock using three common approaches: CMake, Bazel, and manual integration. You will find platform-specific notes for Linux, macOS, and Windows users, along with links to build scripts and quickstart guides.
-
----
-
-## Prerequisites
-
-Before proceeding with installation, ensure the following:
-
-- You have a C++17-capable compiler and environment (see [System Requirements](/getting-started/prerequisites-installation/system-requirements))
-- Necessary developer tools like CMake (version 3.13 or later) or Bazel are installed if you use those build systems
-- Familiarity with your platform's build environment (Terminal, Command Prompt, or PowerShell)
+This guide walks you through installing GoogleTest and GoogleMock on Windows, macOS, and Linux using popular methods: CMake, Bazel, and manual build. Each section provides tested commands, platform-specific tips, and troubleshooting advice to ensure a successful setup.
 
 ---
 
-## 1. Installing with CMake
+## 1. Prerequisites & System Requirements
 
-CMake offers a flexible and widely-adopted method to build and install GoogleTest and GoogleMock.
+Before installation, ensure your system meets the following:
 
-### Step 1: Clone the GoogleTest repository
+- **Supported Platforms:** Windows, macOS, Linux
+- **Compiler Support:** A C++17-compliant compiler (e.g., GCC 7+, Clang 5+, MSVC 2017+)
+- **Build Tools:**
+  - CMake (version 3.13 or later recommended)
+  - Bazel (if using Bazel builds)
+  - A working compiler toolchain (e.g., Visual Studio, Xcode, gcc)
+- **Additional tools for manual:** `make` or equivalent build tool
 
-```bash
-# Clone the repo from GitHub
-$ git clone https://github.com/google/googletest.git -b main
-$ cd googletest
-```
-
-### Step 2: Create a build directory
-
-```bash
-$ mkdir build
-$ cd build
-```
-
-### Step 3: Configure the build
-
-- To build GoogleTest *with* GoogleMock (default):
+<Tip>
+Check your compiler version by running:
 
 ```bash
-$ cmake ..
+# GCC
+gcc --version
+
+# Clang
+clang --version
+
+# MSVC
+cl
 ```
 
-- To build GoogleTest *only* (no GoogleMock):
-
-```bash
-$ cmake .. -DBUILD_GMOCK=OFF
-```
-
-### Step 4: Build the libraries
-
-```bash
-$ cmake --build .
-```
-
-On Unix platforms, you can also use `make`:
-
-```bash
-$ make
-```
-
-### Step 5: (Optional) Install GoogleTest and GoogleMock
-
-With appropriate permissions, install to system directories (usually `/usr/local`):
-
-```bash
-$ sudo make install
-```
-
-This makes the libraries and headers available globally.
+Ensure your CMake version is 3.13 or higher with `cmake --version`.
+</Tip>
 
 ---
 
-### Platform Notes
+## 2. Installing Using CMake
 
-- **Linux/macOS:** All commands can be run in a terminal.
-- **Windows:** Use either "Developer Command Prompt for VS" or PowerShell with CMake and build tools in PATH.
+GoogleTest is distributed with a CMake build script that supports multiple platforms and simplifies the build process.
 
----
+### 2.1 Clone the Repository
 
-### Using GoogleTest in your projects via CMake
+Begin by cloning GoogleTest (includes GoogleMock):
 
-- Use `find_package(GTest REQUIRED)` if installed.
-- Link your target with `GTest::gtest`, `GTest::gtest_main`, `GTest::gmock`, or `GTest::gmock_main` according to your needs.
+```bash
+git clone https://github.com/google/googletest.git -b main
+googletest
+```
 
-Example snippet in your `CMakeLists.txt`:
+### 2.2 Build and Install
+
+#### For Linux/macOS:
+
+```bash
+cd googletest
+mkdir build && cd build
+cmake ..                   # Generate build files with GoogleMock included by default
+make                       # Build libraries
+sudo make install          # Install headers and libraries system-wide
+```
+
+If you want to build only GoogleTest (no GoogleMock):
+
+```bash
+cmake .. -DBUILD_GMOCK=OFF
+make
+sudo make install
+```
+
+#### For Windows with Visual Studio:
+
+1. Open a developer command prompt.
+2. Execute:
+
+```powershell
+cd googletest
+mkdir build
+cd build
+cmake ..                # Generates Visual Studio project files
+cmake --build .         # Builds libraries
+cmake --install .       # Installs libraries and headers
+```
+
+Alternatively, open the generated solution (`gtest.sln`) in Visual Studio and build.
+
+### 2.3 Verify Installation
+
+Confirm `gtest` and `gmock` headers are installed (e.g., under `/usr/local/include` or `%ProgramFiles%` on Windows).
+
+You can link them in projects using `find_package(GTest CONFIG REQUIRED)` and linking `GTest::gtest` or `GTest::gmock_main`.
+
+### 2.4 Integrate Into Existing CMake Projects
+
+For projects already using CMake, either link against the installed libraries or add GoogleTest as a git submodule and include it with `add_subdirectory()`.
+
+Sample usage in your `CMakeLists.txt`:
 
 ```cmake
-find_package(GTest REQUIRED)
-
-add_executable(MyTests my_tests.cc)
-target_link_libraries(MyTests GTest::gmock_main)
-add_test(NAME MyTests COMMAND MyTests)
+find_package(GTest CONFIG REQUIRED)
+add_executable(my_tests test.cpp)
+target_link_libraries(my_tests GTest::gtest_main)
+add_test(NAME my_tests COMMAND my_tests)
 ```
 
-For more details and troubleshooting, see the [Build with CMake guide](/overview/use-cases-integration/integration-with-build-systems).
+<Tip>
+Use the CMake option `-Dgtest_force_shared_crt=ON` on Windows if your project uses dynamic MSVC runtimes to avoid runtime mismatch errors.
+</Tip>
+
+<Warning>
+GoogleTest requires C++17 standard. Ensure your project sets `CMAKE_CXX_STANDARD` to 17 or higher.
+</Warning>
 
 ---
 
-## 2. Installing with Bazel
+## 3. Installing Using Bazel
 
-If you use Bazel as your build system, adding GoogleTest and GoogleMock is straightforward.
+GoogleTest supports Bazel for builds, fitting well with CI pipelines and large-scale projects.
 
-### Step 1: Add GoogleTest dependency
+### 3.1 Add GoogleTest to WORKSPACE
 
-In your `WORKSPACE` file, add the official GoogleTest GitHub repository or use the remote repository rules:
+Add a git_repository rule to your Bazel WORKSPACE file:
 
-```bazel
+```python
 http_archive(
     name = "com_google_googletest",
-    urls = ["https://github.com/google/googletest/archive/main.zip"],
+    urls = [
+        "https://github.com/google/googletest/archive/main.zip",
+    ],
     strip_prefix = "googletest-main",
+    sha256 = "<insert-latest-sha256>"
 )
 ```
 
-### Step 2: Declare dependencies in your `BUILD` files
+Replace `<insert-latest-sha256>` with the SHA256 of the archive.
 
-```bazel
+### 3.2 Load and Use in BUILD Files
+
+In your BUILD file, declare dependencies on `@com_google_googletest//:gtest` and/or `:gmock`.
+
+Example:
+
+```python
 cc_test(
-    name = "my_tests",
-    srcs = ["my_tests.cc"],
-    deps = ["@com_google_googletest//googletest:gtest_main", "@com_google_googletest//googlemock:gmock_main"],
+    name = "my_test",
+    srcs = ["my_test.cc"],
+    deps = ["@com_google_googletest//:gtest_main"],
 )
 ```
 
-### Step 3: Build and run tests
+Run tests with:
 
 ```bash
-$ bazel test //path/to:my_tests
+bazel test //path/to:my_test
 ```
 
-Bazel automatically handles downloading and building GoogleTest.
+<Tip>
+Ensure Bazel is installed and up-to-date for best compatibility.
+
+If you encounter build errors, verify the repository URL and SHA256 are correct.
+</Tip>
 
 ---
 
-## 3. Manual Integration
+## 4. Manual Build Installation
 
-If you prefer manual integration, you can build GoogleTest and GoogleMock as source in your project.
+If you prefer or require manual build without CMake, follow these steps.
 
-### Step 1: Include source files
-
-Copy the following directories into your project repository or reference them as submodules:
-
-- `googletest/include/gtest`
-- `googletest/src`
-- `googlemock/include/gmock`
-- `googlemock/src`
-
-### Step 2: Add source files to your build system
-
-Compile and link** gtest-all.cc** and **gmock-all.cc** along with your test sources.
-
-### Step 3: Example commands
+### 4.1 Clone GoogleTest
 
 ```bash
-# Compile gtest and gmock individually
-$ g++ -std=c++17 -Igoogletest/include -Igooglemock/include googlemock/src/gmock-all.cc googletest/src/gtest-all.cc -c
-# Compile your test source
-$ g++ -std=c++17 -Igoogletest/include -Igooglemock/include my_tests.cc -c
-# Link everything
-$ g++ gmock-all.o gtest-all.o my_tests.o -pthread -o my_tests
+git clone https://github.com/google/googletest.git -b main
+googletest
 ```
 
-Note:
-- Always compile with C++17 or higher.
-- Link with pthread on Linux/macOS.
-- Include the appropriate header search paths.
+### 4.2 Build With Make (Linux/macOS)
+
+```bash
+cd googletest
+gmake -j$(nproc)
+```
+
+or with GNU Make:
+
+```bash
+make -j$(nproc) -C googletest
+make -j$(nproc) -C googlemock
+```
+
+### 4.3 Build on Windows
+
+Create a Visual Studio project manually or open the solution generated by CMake and build the static libraries:
+
+- Build `gtest` and `gmock` static libraries.
+- Link these libraries with your tests manually.
+
+### 4.4 Link Libraries in Your Project
+
+Add `-I` flags to include `googletest/include` and `googlemock/include` headers.
+
+Link against `libgtest.a`, `libgmock.a` or their static/dynamic equivalents.
+
+### 4.5 Compile and Run
+
+An example g++ command:
+
+```bash
+g++ -std=c++17 -isystem googletest/include -isystem googlemock/include \
+    -pthread test.cpp \
+    googletest/libgtest.a googlemock/libgmock.a -o test_binary
+./test_binary
+```
+
+<Tip>
+Link with `-pthread` on Linux/macOS to avoid threading link errors.
+</Tip>
 
 ---
 
-## Verification After Installation
+## 5. Platform-Specific Tips and Known Pitfalls
 
-After you install GoogleTest and GoogleMock via any method, verify the installation:
+### 5.1 Windows
 
-- Build and run a simple test (see [Write and Build Your First Test](/getting-started/first-test-run/create-first-test))
-- Confirm that your build links against `gtest` and optionally `gmock`
-- Run `RUN_ALL_TESTS()` and ensure tests execute successfully
+- Use Visual Studio Developer Command Prompt for environment setup.
+- Enable `gtest_force_shared_crt` option in CMake to avoid runtime library mismatches.
+- Building as shared libraries is optional but ensure DLLs are accessible.
+
+### 5.2 macOS
+
+- Xcode command line tools should be installed (`xcode-select --install`).
+- Use Homebrew to install CMake if missing.
+
+### 5.3 Linux
+
+- Install build essentials: `build-essential`, `cmake`, `git`.
+- Use your distro's package manager to fetch dependencies.
+
+### 5.4 Troubleshooting Build Errors
+
+<AccordionGroup title="Common Issues & Solutions">
+<Accordion title="CMake Unable to Find Compiler">
+Ensure your compiler is installed and in your PATH.
+Example:
+
+```bash
+which g++
+which clang++
+```
+
+If missing, install or configure your environment.
+</Accordion>
+<Accordion title="Runtime Library Mismatch on Windows">
+Enable `-Dgtest_force_shared_crt=ON` in CMake:
+
+```bash
+cmake .. -Dgtest_force_shared_crt=ON
+```
+</Accordion>
+<Accordion title="Undefined References to pthread Functions">
+Make sure to link with pthread: add `-pthread` to compiler and linker flags.
+</Accordion>
+<Accordion title="Test Binary Runs but Reports No Tests Found">
+Verify that tests are registered with the framework and linked with `gtest_main` or `gmock_main`.
+</Accordion>
+</AccordionGroup>
 
 ---
 
-## Additional Resources
+## 6. Running Your First Tests
 
-- GoogleTest [Primer](https://github.com/google/googletest/blob/main/docs/primer.md) for the basics of writing tests
-- [Integration with Build Systems](/overview/use-cases-integration/integration-with-build-systems) for advanced build integration details
-- [Mocking Reference](docs/reference/mocking.md) for working with GoogleMock
+Once installed, create a simple test file `example_test.cpp`:
+
+```c++
+#include <gtest/gtest.h>
+
+TEST(SampleTest, BasicAssertions) {
+  EXPECT_EQ(1 + 1, 2);
+  EXPECT_TRUE(true);
+}
+
+int main(int argc, char **argv) {
+  ::testing::InitGoogleTest(&argc, argv);
+  return RUN_ALL_TESTS();
+}
+```
+
+Compile linking with `gtest_main` or provide your own main:
+
+```bash
+g++ -std=c++17 example_test.cpp -lgtest_main -lpthread -o example_test
+./example_test
+```
+
+You should see output showing tests running and results, confirming installation success.
+
+<Tip>
+To avoid writing your own `main()`, link against `gtest_main` or `gmock_main` which provide a standard entry point.
+</Tip>
 
 ---
 
-If you encounter issues during installation, please consult the [Troubleshooting Common Setup Issues](/getting-started/troubleshooting/common-setup-issues) page.
+## 7. Next Steps & Additional Resources
 
-If you want to get started quickly, try the [Setup and Quickstart Guide](/guides/getting-started/setup-quickstart).
+- Explore [Setup and Project Integration](/getting-started/configuration-first-run/configuration-setup) to include GoogleTest in your projects.
+- Learn to write your first test using [Your First Test: From Source to Success](/getting-started/configuration-first-run/your-first-test).
+- For specialized build system integration, see [Integration Points & Ecosystem Support](/overview/architecture-features/integration-entrypoints).
+- Review troubleshooting tips in [Troubleshooting Common Setup Issues](/getting-started/validation-troubleshooting/common-issues).
+
+<Tip>
+Visit the official [GoogleTest GitHub repository](https://github.com/google/googletest) for latest releases, examples, and community-contributed solutions.
+</Tip>
+
+---
+
+# Summary
+
+This guide empowers you to install and get started with GoogleTest and GoogleMock on Windows, macOS, and Linux via CMake, Bazel, or manual builds. It balances simplicity and practical depth with platform-specific advice and troubleshooting. After following this guide, you'll be ready to integrate GoogleTest into your C++ projects and start writing effective tests.
 
 ---
