--- a/getting-started/configuration-first-run/configuration-setup.mdx
+++ b/getting-started/configuration-first-run/configuration-setup.mdx
@@ -1,191 +1,232 @@
 ---
-title: "Basic Configuration"
-description: "Set up your project for testing: including GoogleTest headers, linking libraries, and integrating with your build system. This page focuses on typical CMake and Bazel usage, with guidance for source inclusion, target setup, and linking practices."
+title: "Setup and Project Integration"
+description: "A hands-on walkthrough for integrating GoogleTest and GoogleMock with your C++ build system. Learn how to add the frameworks to your project, handle dependencies, and verify linkage."
 ---
 
-# Basic Configuration
+# Setup and Project Integration
 
-This page guides you through setting up your C++ project to use GoogleTest. It focuses on integrating the GoogleTest headers, linking the GoogleTest libraries, and configuring your build system with common tools like CMake and Bazel. By following these steps, you’ll be ready to write and run your first tests efficiently.
+A hands-on walkthrough for integrating GoogleTest and GoogleMock with your C++ build system. Learn how to add the frameworks to your project, handle dependencies, and verify linkage.
 
 ---
 
-## 1. Include GoogleTest Headers
+## 1. Understanding Your Integration Needs
 
-To write tests using GoogleTest, your source files must include the primary header:
+Before integrating GoogleTest and GoogleMock, consider your build environment and workflow. These frameworks are designed to work well with common C++ build systems, including CMake, Bazel, and manual builds.
 
-```cpp
-#include <gtest/gtest.h>
+- GoogleTest is a robust and portable testing framework for C++.
+- GoogleMock complements GoogleTest with mocking capabilities.
+- Both come with flexible build scripts and integration points.
+
+Whether you want to build them standalone, embed into your project, or use pre-built libraries, this guide helps you achieve it.
+
+---
+
+## 2. Adding GoogleTest and GoogleMock to Your Project
+
+### Option A: Use Pre-installed or Installed Libraries
+
+If GoogleTest and GoogleMock are already installed on your system, you can simply link against their libraries.
+
+- Find the installation paths of headers and libraries.
+- Add include directories where `gtest/gtest.h` and `gmock/gmock.h` reside.
+- Link to libraries `gtest`, `gmock`, or `gtest_main`, `gmock_main` as needed.
+
+### Option B: Build from Source and Integrate
+
+The recommended way, especially for custom or controlled versions, is to build GoogleTest and GoogleMock alongside your project.
+
+#### Standalone Build Example Using CMake:
+
+```bash
+# Clone the repository and checkout a stable version
+$ git clone https://github.com/google/googletest.git -b v1.17.0
+$ cd googletest
+
+# Create and enter the build directory
+$ mkdir build
+$ cd build
+
+# Configure build for GoogleTest only
+$ cmake .. -DBUILD_GMOCK=OFF
+
+# Build the libraries
+$ make
+
+# (Optional) Install system-wide
+$ sudo make install
 ```
 
-This header provides all core macros, assertions, and test fixtures.
+> **Tip:** To build with GoogleMock included, omit `-DBUILD_GMOCK=OFF`.
 
-<Check>
-Always use angle brackets `<gtest/gtest.h>` to include GoogleTest headers, ensuring proper system include paths.
-</Check>
+#### Integrating in Your CMake Project:
 
-
-## 2. Link GoogleTest Libraries
-
-Your test binaries need to link against GoogleTest libraries to access its implementation. The recommended libraries are:
-
-- **gtest** - The core GoogleTest library.
-- **gtest_main** - An optional library that provides a main() function which handles test initialization and execution.
-
-If you link with `gtest_main`, you typically do *not* need to provide your own `main()`.
-
-<Note>
-Linking against the `gtest_main` target is simpler for most projects. Use `gtest` alone if you want to write a custom main.
-</Note>
-
-
-## 3. Configuring with CMake
-
-CMake is the most common build system GoogleTest supports. It provides multiple ways to integrate GoogleTest source and binaries into your project.
-
-### Option A: Using Installed GoogleTest
-
-If you have installed GoogleTest on your system (e.g., via `sudo make install`), you can find and link it with `find_package`.
+You can add GoogleTest/GoogleMock sources to your project using `add_subdirectory()`:
 
 ```cmake
-find_package(GTest REQUIRED)
-
-add_executable(my_tests test1.cpp test2.cpp)
-# Link with GoogleTest libraries
-target_link_libraries(my_tests GTest::gtest_main)
-```
-
-This method automatically sets the include directories and libraries.
-
-### Option B: Adding GoogleTest Source as a Subdirectory
-
-Download the GoogleTest source and add it as a subdirectory in your project:
-
-```cmake
-add_subdirectory(googletest)
-
-add_executable(my_tests test1.cpp test2.cpp)
-target_link_libraries(my_tests gtest_main)
-```
-
-This approach builds GoogleTest with your project, sharing compiler settings and avoiding compatibility issues.
-
-### Option C: FetchContent to Download at Configure Time
-
-CMake 3.14+ supports `FetchContent` for downloading GoogleTest during configuration:
-
-```cmake
+# In your project's CMakeLists.txt
 include(FetchContent)
+
 FetchContent_Declare(
   googletest
-  URL https://github.com/google/googletest/archive/refs/tags/release-1.12.1.zip
+  URL https://github.com/google/googletest/archive/5376968f6948923e2411081fd9372e71a59d8e77.zip
 )
+
+# This avoids overwriting your compiler flags on Windows
+set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+
 FetchContent_MakeAvailable(googletest)
 
-add_executable(my_tests test1.cpp test2.cpp)
-target_link_libraries(my_tests gtest_main)
+# Add your test executable
+add_executable(mytests test1.cpp test2.cpp)
+
+# Link against GoogleTest and GoogleMock libraries
+target_link_libraries(mytests gtest_main gmock_main)
+
+# Enable testing
+enable_testing()
+add_test(NAME mytests COMMAND mytests)
 ```
 
-This is a robust and flexible approach, especially in CI environments.
+> **Best Practice:** Building as part of your project ensures consistent compiler settings and prevents linking issues related to runtime libraries.
 
-<Warning>
-Ensure your CMake version is 3.14 or higher to use `FetchContent_MakeAvailable()`.
-</Warning>
+### Option C: Manual Integration
 
+- Download the GoogleTest source.
+- Include `googletest/include` and `googlemock/include` in your compiler include paths.
+- Compile the source files from the `googletest/src` and `googlemock/src` directories as part of your test target.
 
-## 4. CMake Configuration Tips
+---
 
-- **C++17 Required:** GoogleTest requires C++17 or newer. Make sure your project configures the standard accordingly:
+## 3. Handling Build Dependencies
 
-```cmake
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-```
+GoogleTest requires:
 
-- **Runtime Library Compatibility:** On Windows, you may need to reconcile runtime library settings between your project and GoogleTest, especially when using dynamic vs static CRT. You can control that via the `gtest_force_shared_crt` variable.
+- A C++ compiler supporting at least C++17 standard.
+- On POSIX systems, pthread library (link with `-pthread` or equivalent).
 
-- **Shared Libraries:** By default, GoogleTest libraries are static. To build as shared libraries, set `BUILD_SHARED_LIBS=ON`.
+GoogleMock depends on GoogleTest, so ensure both are included properly.
 
+When using CMake, `FetchContent` or `add_subdirectory()` handles most dependencies automatically.
 
-## 5. Configuring with Bazel
+---
 
-If your project uses Bazel, you can include GoogleTest via Bazel's native support. The rules for configuring may look like:
+## 4. Configuring Your Test Program
 
-```bazel
-cc_test(
-    name = "my_test",
-    srcs = ["my_test.cc"],
-    deps = ["@com_google_googletest//:gtest_main"],
-)
-```
+### Using Existing Main Functions
 
-Consult the Bazel documentation for version details and repository setup.
+- The GoogleTest `gtest_main` library provides a ready-made `main()` function that initializes the framework and runs all tests.
+- Link your test executable with `gtest_main` (and `gmock_main` if using GoogleMock) instead of `gtest`.
 
+### Writing a Custom main()
 
-## 6. Writing Your Own main() Function
+Write your own main only if you need to customize initialization steps.
 
-If you choose not to link with `gtest_main`, you need to provide a main function that initializes GoogleTest before running tests.
-
-Example main function:
-
-```cpp
+```c++
 #include <gtest/gtest.h>
 
-int main(int argc, char** argv) {
-  testing::InitGoogleTest(&argc, argv);
+int main(int argc, char **argv) {
+  ::testing::InitGoogleTest(&argc, argv);
   return RUN_ALL_TESTS();
 }
 ```
 
-`InitGoogleTest` will parse command-line flags to control test behavior.
-
-
-## 7. Verifying Your Setup
-
-After configuring build and linking GoogleTest, ensure everything is properly set up by writing a very simple test:
-
-```cpp
-#include <gtest/gtest.h>
-
-TEST(SanityCheck, BasicAssertions) {
-  EXPECT_EQ(1, 1);
-}
-```
-
-Build and run your test target; success is indicated by GoogleTest's output showing all tests passing.
-
-
-## 8. Common Pitfalls & Troubleshooting
-
-<AccordionGroup title="Common Configuration Issues">
-<Accordion title="Header Not Found Errors">
-- Ensure the GoogleTest include directory is in your compiler's include path.
-- Check your `find_package` or include directory settings.
-</Accordion>
-
-<Accordion title="Linker Errors (Undefined Symbols)">
-- Confirm you linked against `gtest` or `gtest_main`.
-- Double-check your target link libraries in CMake or build scripts.
-</Accordion>
-
-<Accordion title="Runtime Errors or Tests Not Running">
-- Make sure your main function calls `InitGoogleTest` and `RUN_ALL_TESTS()`.
-- If using `gtest_main`, do not define your own main.
-- Review any custom linker flags or runtime dependencies.
-</Accordion>
-</AccordionGroup>
-
-
-## 9. Next Steps
-
-- Once configured, move to writing your first real tests: [Writing & Running Your First Test](../configuration-first-run/first-test).
-- Explore advanced flags and runtime options: [Advanced GoogleTest Topics](../../docs/advanced.md).
-- Consider integrating GoogleMock for mock-based testing.
-
+> **Important:** Always call `InitGoogleTest()` before `RUN_ALL_TESTS()`. Passing command line arguments allows flag processing for test features.
 
 ---
 
-<Note>
-For detailed integration with CMake, including build options and shared library support, see the CMake build instructions in the official repository.
-</Note>
+## 5. Verifying the Integration
 
-<Source url="https://github.com/google/googletest" paths={[{"path": "googletest/README.md", "range": "10-164"}, {"path": "googlemock/CMakeLists.txt", "range": "1-160"}]} />
+After building your test executable:
+
+1. Run it without arguments to execute all tests.
+2. You should see test run summaries such as:
+
+```
+[==========] Running 3 tests from 1 test suite.
+[ RUN      ] FactorialTest.HandlesZeroInput
+[       OK ] FactorialTest.HandlesZeroInput (0 ms)
+[ RUN      ] FactorialTest.HandlesPositiveInput
+[       OK ] FactorialTest.HandlesPositiveInput (0 ms)
+[==========] 3 tests from 1 test suite ran. (1 ms total)
+[  PASSED  ] 3 tests.
+```
+
+3. If using GoogleMock, also verify that mocks compile and that your mock expectations are respected.
+
+---
+
+## 6. Best Practices and Tips
+
+- **Use CMake's `FetchContent`** to version control GoogleTest alongside your project for reproducible builds.
+- **Build GoogleTest as part of your project** to avoid runtime mismatches and linker errors.
+- **Link against `gtest_main`** unless you need custom initialization.
+- Avoid mixing different versions or builds of GoogleTest in the same project.
+- On Windows, if linking errors about runtime libraries occur, **use the `gtest_force_shared_crt` option** as shown to align runtime linkage.
+
+---
+
+## 7. Troubleshooting Common Issues
+
+### Linker Errors Related to GoogleTest Symbols
+
+- Confirm headers and libraries are correctly included and linked.
+- Check that your project and GoogleTest use the same C++ standard (C++17 minimum).
+- On Windows, make sure runtime linkage is consistent.
+
+### Wrong or Missing `main()` Function
+
+- If the linker complains about missing `main`, either link with `gtest_main` or add your own `main()` invoking `InitGoogleTest()` and `RUN_ALL_TESTS()`.
+
+### Test Not Running or Discovered
+
+- Ensure your tests use the `TEST()` or `TEST_F()` macros.
+- Confirm that your test files are compiled and linked into your test executable.
+
+---
+
+## 8. Additional Resources
+
+- [GoogleTest Primer](primer.md) - Learn how to write and structure tests.
+- [Installation Methods](getting-started/prerequisites-installation/installation-methods.md) - More detailed installation steps.
+- [Core Workflow Guides](guides/core-workflows/your-first-test.md) - Writing and running your first tests.
+- GoogleTest GitHub Repo: https://github.com/google/googletest
+
+---
+
+## Summary
+
+Set up GoogleTest and GoogleMock by building them standalone or embedding into your project using your preferred build system. Utilize the provided main functions or write custom ones with proper initialization. Confirm linkage, dependencies, and compatibility. Verify the test executable successfully runs all tests and troubleshoot linker or discovery issues by checking build configurations and runtime environments.
+
+---
+
+## Example: Minimal CMakeLists.txt
+
+```cmake
+cmake_minimum_required(VERSION 3.14)
+project(MyProject LANGUAGES CXX)
+
+# Enable testing
+include(CTest)
+
+# Fetch GoogleTest
+include(FetchContent)
+FetchContent_Declare(
+  googletest
+  URL https://github.com/google/googletest/archive/5376968f6948923e2411081fd9372e71a59d8e77.zip
+)
+set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+FetchContent_MakeAvailable(googletest)
+
+# Add executable for tests
+add_executable(mytests test_main.cpp my_test_source.cpp)
+
+# Link with GoogleTest and GoogleMock
+target_link_libraries(mytests gtest_main gmock_main)
+
+enable_testing()
+add_test(NAME mytests COMMAND mytests)
+```
+
+---
+
+Feel confident following this guide to integrate GoogleTest and GoogleMock seamlessly into your C++ projects for reliable, maintainable testing.
